<?xml version="1.0"?>
<package format="2">
  <name>pal_carbon_collector</name>
  <version>0.0.1</version>
  <description>Node that collects statistics from topics and sends them to carbon</description>

  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Proprietary</license>

  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>pal_statistics_msgs</exec_depend>
  <exec_depend>python-graphitesend</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>rostest</test_depend>

</package>
