<?xml version="1.0"?>
<package format="3">
  <name>pal_statistics</name>
  <version>2.0.2</version>
  <description>The pal_statistics package</description>

  <maintainer email="victor.lopez@pal-robotics.com">victor</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>boost</depend>
  <depend>pal_statistics_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
