<?xml version="1.0"?>
<package format="2">
  <name>pal_statistics_msgs</name>
  <version>1.5.0</version>
  <description>Statistics msgs package</description>

  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>MIT</license>

  <author email="jordan.palacios@pal-robotics.com">Jordan Palacios</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
